--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <h1 class="jumbotron jumbotron-fluid banner">The Burger Place!</h1>
 
 <div class="row" id="burgerImage">
-  <img src="/public/assets/img/burger.jpg" class="rounded" alt="The funny burger image">
+  <img src="../assets/img/burger.jpg" class="rounded" alt="The funny burger image">
 </div>
 
 <div class="row addingBurger">
