--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -6,8 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
 		integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-	<link rel="stylesheet" href="/public/assets/css/burger_style.css">
-	<title>The Burger Place with MVC!</title>
+	<link rel="stylesheet" href="../assets/css/burger_style.css">
+	<title>MVC With Burgers!</title>
 	
 </head>
 
@@ -22,6 +21,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
 	integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
 	crossorigin="anonymous"></script>
-    <script src="/public/assets/js/burgers.js"></script>
+    <script src="../assets/js/burgers.js"></script>
 
 </html>
