--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,29 @@
 	<div class="container-fluid">
 		{{{ body }}}
 	</div>
+
+    <!-- Footer -->
+    <div class="container">
+        <footer class="center footer">
+            <div class="footer-copyright">
+                <div class="container text-center" id="footer">
+                    <span> © 2021 Copyright</span>
+                    <br>
+                    <span> Devoured a Burger?
+                        <link rel="stylesheet" type="text/css"
+                            href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
+                        Made with <i class="icon ion-heart"></i> By
+                        <a href=""
+                            target="blank"></a>
+                        <br>
+                        Nadja
+                    </span>
+                </div>
+            </div>
+        </footer>
+    </div>
 </body>
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
 	integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
 	crossorigin="anonymous"></script>
