--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -2,10 +2,10 @@
 	{{name}}
 	{{#if devour}}
 	<br>
-	<button class="change-devour" data-id="{{id}}" data-newdevour="{{devour}}">
+	<button class="change-devour btn btn-outline-success" data-id="{{id}}" data-newdevour="{{devour}}">
 		DEVOUR IT!
 	</button>
 	{{/if}}
 	<br>
-	<button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
+	<button class="delete-burger btn btn-outline-danger" data-id="{{this.id}}">DELETE!</button>
 </li>
