small changes on css

--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -3,6 +3,7 @@ body {
   }
   
   .banner {
+    background-image: linear-gradient(to right, rgb(45, 62, 100) , rgb(172, 172, 172));
     background-color: rgb(255, 255, 255);
     text-align: center;
     border-radius: 10px;
@@ -26,16 +27,18 @@ body {
   }
   
   .not-devoured-css {
-    background-color: rgb(83, 83, 83);
+    background-color: rgb(54, 56, 63);
     padding: 20px 20px 20px 20px;
-    border-radius: 40px;
+    border-top-left-radius: 40px;
+    border-bottom-left-radius: 40px;
     color: rgb(168, 168, 168);
   }
 
   .devoured-css {
-    background-color: rgb(83, 83, 83);
+    background-color: rgb(54, 56, 63);
     padding: 20px 20px 20px 20px;
-    border-radius: 40px;
+    border-top-right-radius: 40px;
+    border-bottom-right-radius: 40px;
     color: rgb(168, 168, 168);
   }
 
