--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
-<h1 class="jumbotron jumbotron-fluid banner">The Burger Place!</h1>
+<h1 class="jumbotron jumbotron-fluid banner">The Home Made Burger Place!</h1>
 <div class="container">
   <div class="row">
     <div class="col-12">
